--- a/src/app/components/sobreposicao/sobreposicao.component.html
+++ b/src/app/components/sobreposicao/sobreposicao.component.html
@@ -1,34 +1,23 @@
 <!-- card-container.component.html -->
 
 <div class="card-container">
-  <mat-card class="example-card">
-    <mat-card-header>
-      <mat-card-title>ETF 1</mat-card-title>
-    </mat-card-header>
-    <mat-card-content>
-      <mat-form-field class="example-full-width">
-        <mat-label>ETF</mat-label>
-        <input type="text"
-               placeholder="BOVA11"
-               aria-label="ETF"
-               matInput
-               [formControl]="myControl"
-               [matAutocomplete]="auto">
-        <mat-autocomplete #auto="matAutocomplete">
-          @for (option of filteredOptions | async; track option) {
-            <mat-option [value]="option">{{option}}</mat-option>
-          }
-        </mat-autocomplete>
-      </mat-form-field>
-    </mat-card-content>
-  </mat-card>
+  <mat-form-field>
+    <mat-label>ETF 1</mat-label>
+    <input matInput list="etf1" name="menace" [(ngModel)]="etf1">
+    <datalist id="etf1">
+      <option *ngFor="let option of options">{{ option }} </option>
+    </datalist>
+    {{ options.includes(etf1) ? 'Tipo: ' + this.optionsMap[etf1] : '' }}
+  </mat-form-field>
 
-  <mat-card class="example-card">
-    <mat-card-header>
-      <mat-card-title>ETF 2</mat-card-title>
-    </mat-card-header>
-    <mat-card-content>
+  <mat-form-field>
+    <mat-label>ETF 2</mat-label>
+    <input matInput list="etf2" name="menace" [(ngModel)]="etf2">
+    <datalist id="etf2">
+      <option *ngFor="let option of options">{{ option }} </option>
+    </datalist>
+    {{ options.includes(etf2) ? 'Tipo: ' + this.optionsMap[etf2] : '' }}
+  </mat-form-field>
 
-    </mat-card-content>
-  </mat-card>
+  <button mat-raised-button color="primary" (click)="calcular()"> Calcular </button>
 </div>
