--- a/src/app/components/sobreposicao/sobreposicao.component.html
+++ b/src/app/components/sobreposicao/sobreposicao.component.html
@@ -1,23 +1,73 @@
 <!-- card-container.component.html -->
+<div class="container">
+  <div class="search-container">
+    <mat-form-field>
+      <mat-label>ETF 1</mat-label>
+      <input matInput list="etf1" name="menace" [(ngModel)]="etf1">
+      <datalist id="etf1">
+        <option *ngFor="let option of options">{{ option }} </option>
+      </datalist>
+      <i *ngIf="options.includes(etf1)">{{ 'Tipo: ' + this.optionsMap[etf1] }}</i>
+    </mat-form-field>
 
-<div class="card-container">
-  <mat-form-field>
-    <mat-label>ETF 1</mat-label>
-    <input matInput list="etf1" name="menace" [(ngModel)]="etf1">
-    <datalist id="etf1">
-      <option *ngFor="let option of options">{{ option }} </option>
-    </datalist>
-    {{ options.includes(etf1) ? 'Tipo: ' + this.optionsMap[etf1] : '' }}
-  </mat-form-field>
+    <mat-form-field>
+      <mat-label>ETF 2</mat-label>
+      <input matInput list="etf2" name="menace" [(ngModel)]="etf2">
+      <datalist id="etf2">
+        <option *ngFor="let option of options">{{ option }} </option>
+      </datalist>
+      <i *ngIf="options.includes(etf2)">{{ 'Tipo: ' + this.optionsMap[etf2] }}</i>
+    </mat-form-field>
+    <button mat-raised-button color="primary" (click)="buttonCalcularClick()"> Calcular </button>
+  </div>
 
-  <mat-form-field>
-    <mat-label>ETF 2</mat-label>
-    <input matInput list="etf2" name="menace" [(ngModel)]="etf2">
-    <datalist id="etf2">
-      <option *ngFor="let option of options">{{ option }} </option>
-    </datalist>
-    {{ options.includes(etf2) ? 'Tipo: ' + this.optionsMap[etf2] : '' }}
-  </mat-form-field>
+  <div *ngIf="portfolio1&&portfolio2" class="card-container">
+    <mat-card class="venn-card">
+      <app-venn-chart [portfolio1]="portfolio1" [portfolio2]="portfolio2" />
+    </mat-card>
+  </div>
 
-  <button mat-raised-button color="primary" (click)="calcular()"> Calcular </button>
+  <div *ngIf="portfolio1 && portfolio2" class="card-container">
+    <!-- Table Cards -->
+    <mat-card class="table-card">
+      <h2>{{ portfolio1.ticker }} Top 5 Ativos</h2>
+      <button mat-button color="primary" (click)="openDialog(portfolio1)">Ver Todos os Ativos</button>
+      <table mat-table [dataSource]="getTopShares(portfolio1.holdings)">
+
+        <ng-container matColumnDef="Ticker">
+          <th mat-header-cell *matHeaderCellDef> Ativo </th>
+          <td mat-cell *matCellDef="let element"> {{element.ticker}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="Share">
+          <th mat-header-cell *matHeaderCellDef> Participacao </th>
+          <td mat-cell *matCellDef="let element"> {{element.share}} </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+    </mat-card>
+
+    <mat-card class="table-card">
+      <h2>{{ portfolio2.ticker }} Top 5 Ativos</h2>
+      <button mat-button color="primary" (click)="openDialog(portfolio2)">Ver Todos os Ativos</button>
+      <table mat-table [dataSource]="getTopShares(portfolio2.holdings)">
+
+        <ng-container matColumnDef="Ticker">
+          <th mat-header-cell *matHeaderCellDef> Ativo </th>
+          <td mat-cell *matCellDef="let element"> {{element.ticker}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="Share">
+          <th mat-header-cell *matHeaderCellDef> Participacao </th>
+          <td mat-cell *matCellDef="let element"> {{element.share}} </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+    </mat-card>
+  </div>
 </div>
+
