--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,11 +2,11 @@
   <mat-toolbar color="primary">
     <span>Status ETFs</span>
     <span class="example-spacer"></span>
-    <button title="Ajude a manter o projeto" (click)="donate()" mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
+    <button matTooltip="Ajude a manter o projeto" (click)="donate()" mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
       <mat-icon>favorite</mat-icon>
     </button>
-<!--    <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">-->
-<!--      <mat-icon>share</mat-icon>-->
-<!--    </button>-->
+    <button matTooltip="Compartilhar" mat-icon-button class="example-icon" aria-label="Example icon-button with share icon" (click)="openDialog()">
+      <mat-icon>share</mat-icon>
+    </button>
   </mat-toolbar>
 </p>
