--- a/src/app/components/sobreposicao/sobreposicao.component.css
+++ b/src/app/components/sobreposicao/sobreposicao.component.css
@@ -1,7 +1,7 @@
 /* card-container.component.css */
 
 .container {
-  height: 79vh;
+  padding-bottom: 10%;
   overflow-y: auto; /* Adicionado para permitir rolagem vertical */
 }
 
