simbolo de porcentagem no share

--- a/src/app/components/sobreposicao/sobreposicao.component.html
+++ b/src/app/components/sobreposicao/sobreposicao.component.html
@@ -41,7 +41,7 @@
 
         <ng-container matColumnDef="Share">
           <th mat-header-cell *matHeaderCellDef> Participacao </th>
-          <td mat-cell *matCellDef="let element"> {{element.share}} </td>
+          <td mat-cell *matCellDef="let element"> {{element.share}}% </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -61,7 +61,7 @@
 
         <ng-container matColumnDef="Share">
           <th mat-header-cell *matHeaderCellDef> Participacao </th>
-          <td mat-cell *matCellDef="let element"> {{element.share}} </td>
+          <td mat-cell *matCellDef="let element"> {{element.share}}% </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
