--- a/src/app/components/all-shares-dialog/all-shares-dialog.component.html
+++ b/src/app/components/all-shares-dialog/all-shares-dialog.component.html
@@ -9,7 +9,7 @@
 
     <ng-container matColumnDef="Share">
       <th mat-header-cell *matHeaderCellDef> Participacao </th>
-      <td mat-cell *matCellDef="let element"> {{element.share}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.share}}% </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
